# updraft-substreams

./: .gitignore  README.md  generator.json
v1/: Cargo.toml  README.md  build.rs  substreams.yaml
v1/abi/: idea.abi.json  solution.abi.json  updraft.abi.json
v1/proto/: idea.proto  ideacontribution.proto  solution.proto  solutioncontribution.proto  user.proto
v1/src/: idea.rs  lib.rs  solution.rs  user.rs
v1/src/abi/: idea.rs  mod.rs  solution.rs  updraft.rs
v1/src/pb/: idea.v1.rs  ideacontribution.v1.rs  mod.rs  solution.v1.rs  solutioncontribution.v1.rs  user.v1.rs
