[package]
name = "v1"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0.0"  # For decoding event data
hex-literal = "1.0.0"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.13.5"
prost-types = "0.13.5"
substreams = "0.6.1"
substreams-ethereum = "0.10.5"
# substreams-helper = "0.0.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.10.0"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
